k8s-manifests/registry/registry-deployment0.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      nodeSelector:
        node-type: worker
      containers:
      - name: docker-registry
        image: registry:2.6.2
        ports:
        - name: http
          containerPort: 5000
        volumeMounts:
        - name: registry-certs
          mountPath: "/certs"
          readOnly: true
        - name: registry-data
          mountPath: "/var/lib/registry"
          subPath: registry
      volumes:
      - name: registry-certs
        secret:
          secretName: registry-tls-exp
      - name: registry-data
        persistentVolumeClaim:
          claimName: iregistry-pvc
