k8s-manifests/registry/registry-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
            -  containerPort: 5000
          volumeMounts:
            - name: registry-certs
              mountPath: "/certs"
              readOnly: true
            - name: image-store
              mountPath: "/var/lib/registry"
      volumes:
        - name: registry-certs
          secret:
            secretName: registry-tls
        - name: image-store
          persistentVolumeClaim:
            claimName: iregistry-pvc
