k8s-manifests/registry/registry-deployment-old.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - mountPath: /var/lib/registry
              name: registry-storage
            - mountPath: /auth
              name: auth
              readOnly: true
            - mountPath: /certs
              name: certs
              readOnly: true
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: iregistry-pvc
      - name: auth
        secret:
          secretName: docker-registry/registry-auth
      - name: certs
        secret:
          secretName: docker-registry/registry-tls-expf
---

apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
