k8s-manifests/registry/registry-depoyment4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: "registry:2.6.2"
        ports:
        - name: reg-http-port
          containerPort: 5000
        volumeMounts:
        - mountPath: /var/lib/registry
          name: registry-storage
        - mountPath: /certs
          name: certs
        - mountPath: /auth
          name: auth
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: iregistry-pvc
      - name: certs
        secret:
          secretName: registry-tls-expf
      - name: auth
        secret:
          secretName: registry-auth
---
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
  - name: reg-http-port
    port: 5000
    targetPort: 5000
