k8s-manifests/registry/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  selector:
    app: registry
  ports:
  - name: http
    port: 5000
    targetPort: 5000
#  type: ClusterIP
