k8s-manifests/registry/registry-deployment5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
          - mountPath: /var/lib/registry
            name: registry-storage
          - mountPath: /auth
            name: auth
            readOnly: true
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: iregistry-pvc
      - name: auth
        secret:
          secretName: registry-auth
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  namespace: docker-registry
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#    nginx.ingress.kubernetes.io/proxy-body-size: "2.5G"
spec:
  ingressClassName: nginx-int
  rules:
    - host: registry.alislight.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
