k8s-manifests/registry/registry-ingress1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
#    kubernetes.io/tls-acme: 'true'
  name: docker-registry-ingress
  namespace: docker-registry
spec:
  ingressClassName: nginx
#  tls:
#  - hosts:
#    - registry.exponentify.com
#    secretName: registry-tls
  rules:
  - host: registry.exponentify.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry-svc
            port:
              number: 5000
