k8s-manifests/registry/traefik-ingress-route.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: docker-registry
  namespace: docker-registry

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`registry.exponentify.com`)
      kind: Rule
      services:
        - name: docker-registry
          port: 5000
